# kart-rpg

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/glad/: CMakeLists.txt
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/imgui/: CMakeLists.txt  imconfig.h
src/linmath/: CMakeLists.txt
src/render/: CMakeLists.txt  camera.cpp  camera.h  notes.txt  render.cpp  render.h
src/shaders/: frag.glsl  vert.glsl
src/stb_image/: CMakeLists.txt
